--- a/contacto.html
+++ b/contacto.html
@@ -241,7 +241,7 @@
           <img class="img-fluid" src="./images/graciasPorEscribirnos.png" alt="mensaje de formulario enviado">
         </div>
         <div>
-          <button class="botonBuscar" v-on:click="mostrarFormulario">Mandar otro comentario</button>
+          <button class="botonBuscar" v-on:click="mostrarFormulario">Enviar otro mensaje</button>
         </div>
       </div>
     </main>
