se agrego el boton de las cartas de las productos destacados

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
                   <li class="cart-text">{{producto.descripcion}}</li>
                 </ul>
               </div>
+              <a class="btn btn-warning  btn-sm"  :href="producto.tipo == 'Juguete' ? './juguetes.html' : './farmacia.html'">Ver en tienda</a>
 
             </div>
           </div>
